@@ -57,4 +57,5 @@ TODO
     - Queued movement
         - Show path for this
     - Flowermenu as a list rather than circle
-    - Flavor Objs with flatworld sometimes don't use z = 0, need to get the source to fix that.
+    - Allow targetting of objs and the TargetSprite
+    - Account manager at login
