@@ -41,3 +41,4 @@
     - Added back the "No Gob Audio" option under Audio Options.
     - Added back in the Grid mode via 'g' key
     - Added back flatworld, can be toggled in the Options window under Graphics.
+    - Added back quick flower menus, can be toggled under Options window under Gameplay
